// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Modal/demo/async_close.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Modal with async logic
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/basic.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/confirm.md correctly 1`] = `
<button
  class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
  type="button"
>
  <span>
    Confirm
  </span>
</button>
`;

exports[`renders Modal/demo/confirm_type.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Info
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-success"
      type="button"
    >
      <span>
        Success
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-warning"
      type="button"
    >
      <span>
        Warning
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square arco-btn-status-danger"
      type="button"
    >
      <span>
        Error
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Modal/demo/custom_button_text.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Modal
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  />
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Confirm
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        info
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Modal/demo/footer.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Open Modal with customized button props
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  />
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Open Modal with customized footer
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:24px"
  />
  <div
    class="arco-space-item"
    style="margin-right:24px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Open Modal without footer
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  />
</div>
`;

exports[`renders Modal/demo/header.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Left align title
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  />
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Center align title
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  />
</div>
`;

exports[`renders Modal/demo/load_data.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/modal_render.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Draggable Modal
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/position.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Display a modal dialog at 20px to top
    </span>
  </button>
  <br />
  <br />
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Vertically centered modal dialog
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/update.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/useModal.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Confirm
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Info
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Success
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Warning
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <button
      class="arco-btn arco-btn-secondary arco-btn-size-default arco-btn-shape-square"
      type="button"
    >
      <span>
        Error
      </span>
    </button>
  </div>
  <div
    class="arco-space-item"
  >
    <button
      class="arco-btn arco-btn-outline arco-btn-size-default arco-btn-shape-square arco-btn-status-danger"
      type="button"
    >
      <span>
        Can't get context
      </span>
    </button>
  </div>
</div>
`;

exports[`renders Modal/demo/with_alert.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;

exports[`renders Modal/demo/with_step.md correctly 1`] = `
<div>
  <button
    class="arco-btn arco-btn-primary arco-btn-size-default arco-btn-shape-square"
    type="button"
  >
    <span>
      Open Modal
    </span>
  </button>
</div>
`;
